# BlackJack

./: .gitignore  Banco.c  CMakeLists.txt  GestionePartita.c  GestioneStoricoPartite.c  GestioneUtenti.c  Giocatore.c  Globali.c  LICENSE  README.md  banco.c  gestioneStoricoPartite.c  gestioneUtenti.c  giocatore.c  main.c  main.h
File/: StoricoPartite  Utenti
